WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2007-03-06


Version 0.2.4 (under dev!):
   * added new return code in plugin API to force highlight (for message
     handlers only)
   * fixed bug with server buffer when "look_one_server_buffer" is ON and
     server buffer is moved to any number > 1 (bug #19219)
   * fixed /help command: displays plugin help for redefined commands
     (bug #19166)
   * prefix '/' disabled in commands (patch #5769)
   * fixed completion of redefined commands removed by plugins (bug #19176)
   * fixed memory leaks in perl and python plugins (bug #19163)
   * added "call" option to /key command, added new key function "insert" to
     insert text on command line (task #6468)
   * fixed permissions on "dcc" and "logs" directories (bug #18978)
   * added event handler to plugin API
   * added scots quickstart guide
   * added numeric argument for /clear command (buffer number) (patch #5372)
   * fixed crash when /away command is issued with no server connection
     (bug #18839)
   * fixed crash when closing a buffer opened on many windows
   * fixed freeze with SSL server when disconnecting after connection loss
     (bug #18735)

Version 0.2.3 (2007-01-10):
   * fixed display bugs with nicklist at top/bottom when look_nicklist_separator
     is OFF (bug #18737)
   * fixed iconv problem, causing truncated words when using iso locale
   * fixed topic scroll when topic has multi-bytes chars
   * fixed compilation problem with iconv under FreeBSD
   * fixed bugs with charset: now decodes/encodes nicks and channels in IRC
     messages (bug #18716)

Version 0.2.2 (2007-01-06):
   * fixed bug with status bar (missing refresh) when closing a buffer
   * fixed bug with use of first buffer for a channel if not connected
     to server (now allowed only for a server buffer)
   * fixed refresh bug with private buffer title
   * fixed bug with nick completion in command args (now uses option